--- a/joinlink.html
+++ b/joinlink.html
@@ -88,7 +88,7 @@
 </head>
 <body>
   <div id="join-link-modal">
-    <h2 style="margin: 0 0 8px; color: var(--primary); font: 600 16px/1 system-ui; border-bottom: 1px solid var(--glass-border); padding-bottom: 6px;">Join Game</h2>
+    <h2 style="margin: 0 0 8px; color: var(--primary); font: 600 16px/1 system-ui; border-bottom: 1px solid var(--glass-border); padding-bottom: 6px;">Join Game/Lobby</h2>
     <div class="join-input-container">
       <input type="text" class="join-input" id="game-link-input" placeholder="Paste game link (https://kirka.io/games/...)">
       <button class="paste-button" id="paste-button"><i class="fas fa-paste"></i></button>
